--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "prepare": "husky",
     "typeorm": "ts-node ./node_modules/typeorm/cli.js",
-    "migration:generate": "npm run typeorm -- migration:generate -d src/config/data-source.ts src/migrations",
+    "migration:generate": "npm run typeorm -- migration:generate -d src/config/data-source.ts src/migrations/${npm_config_name:-$(date +%s)}",
     "migration:create": "npm run typeorm -- migration:create src/migrations",
     "migration:run": "npm run typeorm -- migration:run -d src/config/data-source.ts",
     "migration:revert": "npm run typeorm -- migration:revert -d src/config/data-source.ts",
