--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "class-validator": "^0.14.2",
     "firebase-admin": "^13.6.0",
     "nestjs-typeorm-paginate": "^4.1.0",
+    "nodemailer": "^7.0.11",
     "pg": "^8.16.3",
     "qrcode": "^1.5.4",
     "reflect-metadata": "^0.2.2",
