feat: audience DTO tweak, auth login cleanup, org listing, docker volume

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -25,6 +25,8 @@ services:
     depends_on:
       - postgres
       - redis  # Add this dependency
+    volumes:
+      - downloads:/data:rw
 
   postgres:
     image: postgres:17
@@ -59,4 +61,5 @@ services:
 
 volumes:
   postgres_data:
+  downloads:
   redis_data:  # Add this volume definition
