--- a/package.json
+++ b/package.json
@@ -24,8 +24,12 @@
     "migration:generate": "npm run typeorm -- migration:generate -d src/config/data-source.ts src/migrations/${npm_config_name:-$(date +%s)}",
     "migration:create": "npm run typeorm -- migration:create src/migrations",
     "migration:run": "npm run typeorm -- migration:run -d src/config/data-source.ts",
+    "migration:run:prod": "node ./node_modules/typeorm/cli.js migration:run -d dist/config/data-source.js",
     "migration:revert": "npm run typeorm -- migration:revert -d src/config/data-source.ts",
+    "migration:revert:prod": "node ./node_modules/typeorm/cli.js migration:revert -d dist/config/data-source.js",
     "migration:show": "npm run typeorm -- migration:show -d src/config/data-source.ts",
+    "migration:show:prod": "node ./node_modules/typeorm/cli.js migration:show -d dist/config/data-source.js",
+    "migrate:prod": "./scripts/migrate-production.sh",
     "tenant:migrate": "ts-node -r tsconfig-paths/register src/scripts/run-tenant-migrations.ts",
     "tenant:rebuild": "ts-node -r tsconfig-paths/register src/scripts/rebuild-tenant-schemas.ts",
     "tenant:sync": "ts-node -r tsconfig-paths/register src/scripts/sync-tenant-migrations.ts"
