--- a/package.json
+++ b/package.json
@@ -24,12 +24,17 @@
     "migration:generate": "npm run typeorm -- migration:generate -d src/config/data-source.ts src/migrations/${npm_config_name:-$(date +%s)}",
     "migration:create": "npm run typeorm -- migration:create src/migrations",
     "migration:run": "npm run typeorm -- migration:run -d src/config/data-source.ts",
-    "migration:run:prod": "NODE_ENV=production npm run typeorm -- migration:run -d src/config/data-source.ts",
+    "migration:run:prod": "npm run typeorm -- migration:run -d src/config/data-source.ts",
     "migration:revert": "npm run typeorm -- migration:revert -d src/config/data-source.ts",
     "migration:revert:prod": "npm run typeorm -- migration:revert -d src/config/data-source.ts",
     "migration:show": "npm run typeorm -- migration:show -d src/config/data-source.ts",
     "migration:show:prod": "npm run typeorm -- migration:show -d src/config/data-source.ts",
     "migrate:prod": "./scripts/migrate-production.sh",
+    "migrate:prod:simple": "./scripts/migrate-simple.sh",
+    "migrate:prod:generate": "./scripts/generate-migration-prod.sh",
+    "migrate:prod:all": "./scripts/migrate-all-schemas.sh",
+    "migrate:debug": "docker compose -f docker-compose.migration-debug.yml up -d",
+    "migrate:debug:down": "docker compose -f docker-compose.migration-debug.yml down -v",
     "tenant:migrate": "ts-node -r tsconfig-paths/register src/scripts/run-tenant-migrations.ts",
     "tenant:rebuild": "ts-node -r tsconfig-paths/register src/scripts/rebuild-tenant-schemas.ts",
     "tenant:sync": "ts-node -r tsconfig-paths/register src/scripts/sync-tenant-migrations.ts"
