--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -3,6 +3,7 @@ services:
     build:
       context: .
       dockerfile: docker/Dockerfile.local
+      # dockerfile: docker/Dockerfile.prod
     restart: unless-stopped
     env_file:
       - path: .env
