--- a/docker/Dockerfile.local
+++ b/docker/Dockerfile.local
@@ -1,19 +1,90 @@
-FROM node:22-alpine
+# syntax = docker/dockerfile:1
 
+# Adjust NODE_VERSION as desired
+ARG NODE_VERSION=22.14.0
+FROM node:${NODE_VERSION}-slim AS base
+
+LABEL fly_launch_runtime="NestJS"
+
+# NestJS app lives here
 WORKDIR /app
 
-# Install bash for migration scripts
-RUN apk add --no-cache bash
+# Set production environment
+ENV NODE_ENV="production"
 
-COPY package*.json ./
 
-RUN npm install
+# Throw-away build stage to reduce size of final image
+FROM base AS build
 
-COPY . .
+# Install packages needed to build node modules and canvas
+RUN apt-get update -qq && \
+    apt-get install --no-install-recommends -y \
+    build-essential \
+    node-gyp \
+    pkg-config \
+    python-is-python3 \
+    libcairo2-dev \
+    libpango1.0-dev \
+    libjpeg-dev \
+    libgif-dev \
+    librsvg2-dev
 
-# Ensure scripts have execute permissions
-RUN chmod +x scripts/*.sh
+# Install node modules
+COPY package-lock.json package.json ./
+RUN npm ci --include=dev
 
+# Copy application code (respecting .dockerignore)
+COPY tsconfig*.json ./
+COPY nest-cli.json ./
+COPY src ./src
+
+# Build application
+RUN npm run build
+
+# Verify build output and show structure
+RUN echo "=== Checking build output ===" && \
+    ls -la /app/dist && \
+    find /app/dist -name "*.js" -type f && \
+    test -f /app/dist/src/main.js
+
+
+# Final stage for app image
+FROM base
+
+# Set Node.js memory limit (use 80% of available RAM)
+ENV NODE_OPTIONS="--max-old-space-size=768"
+
+# Install yt-dlp, canvas runtime dependencies, and required dependencies
+# yt-dlp is a Python script, so we need Python3
+# Canvas requires runtime libraries for image processing
+RUN apt-get update -qq && \
+    apt-get install --no-install-recommends -y \
+    ca-certificates \
+    curl \
+    ffmpeg \
+    python3 \
+    libcairo2 \
+    libpango-1.0-0 \
+    libpangocairo-1.0-0 \
+    libgdk-pixbuf2.0-0 \
+    shared-mime-info \
+    && curl -L https://github.com/yt-dlp/yt-dlp/releases/latest/download/yt-dlp -o /usr/local/bin/yt-dlp \
+    && chmod a+rx /usr/local/bin/yt-dlp \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
+
+# Copy built application
+COPY --from=build /app/dist /app/dist
+COPY --from=build /app/node_modules /app/node_modules
+COPY --from=build /app/package.json /app/package.json
+
+# Copy migration scripts
+COPY scripts /app/scripts
+
+# Verify files are present
+RUN ls -la /app/dist/src
+
+# Start the server by running the compiled main.js directly
 EXPOSE 3000
 
 CMD ["npm", "run", "start:dev"]
