--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "firebase-admin": "^13.6.0",
+    "minio": "^8.0.6",
     "nestjs-typeorm-paginate": "^4.1.0",
     "nodemailer": "^7.0.11",
     "pg": "^8.16.3",
@@ -70,6 +71,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
+    "@types/nodemailer": "^7.0.4",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
