feat: add initial tenant schema migration defining core entities

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -2,8 +2,8 @@ services:
   api:
     build:
       context: .
-      dockerfile: docker/Dockerfile.local
-      # dockerfile: docker/Dockerfile.prod
+      # dockerfile: docker/Dockerfile.local
+      dockerfile: docker/Dockerfile.prod
     restart: unless-stopped
     env_file:
       - path: .env
