feat(roles): add 'super_admin' role to various controllers and update logging configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,8 @@ services:
       GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
       GOOGLE_CLIENT_SECRET: ${GOOGLE_CLIENT_SECRET}
       GOOGLE_CALLBACK_URL: ${GOOGLE_CALLBACK_URL}
+      DB_LOGGING: ${DB_LOGGING}
+      API_LOGGING: ${API_LOGGING}
 
     develop:
       watch:
